--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.12.1",
     "jquery": "^3.6.0",
+    "npm": "^8.8.0",
     "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.0",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
