--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.0",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
