--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.12.1",
     "jquery": "^3.6.0",
+    "npm": "^8.8.0",
     "prismjs": "^1.28.0",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
