--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
-  "name": "gatsby-starter-hello-friend",
-  "description": "A simple starter for Gatsby. That's it.",
-  "version": "0.2.0",
-  "author": "Radek Kozieł <radoslaw.koziel@gmail.com>",
-  "keywords": [
-    "gatsby",
-    "minimal",
-    "starter",
-    "blog",
-    "theme",
-    "dark",
-    "light",
-    "personal site"
-  ],
-  "license": "MIT",
+  "name": "planned-universe",
+  "description": "planned universe, the actual blog",
+  "version": "2.2.0",
+  "author": "Lawrence Wang",
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby clean && gatsby develop",
@@ -38,34 +27,32 @@
     "gatsby-source-filesystem": "^2.11.1",
     "gatsby-transformer-remark": "^2.16.1",
     "gatsby-transformer-sharp": "^2.12.1",
-    "jquery": "^3.6.0",
-    "npm": "^8.8.0",
-    "prismjs": "^1.28.0",
+    "jquery": "^3.7.1",
+    "npm": "^8.19.4",
+    "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^5.2.0",
-    "sass": "^1.51.0"
+    "sass": "^1.71.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "babel-eslint": "^10.0.1",
     "babel-preset-gatsby": "^0.1.6",
     "cssnano": "^4.1.11",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^1.4.0",
     "gatsby-remark-embed-video": "^1.7.0",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-mixins": "^6.2.1",
     "postcss-nested": "^4.1.1",
-    "postcss-preset-env": "^6.7.1",
+    "postcss-preset-env": "^6.7.2",
     "postcss-url": "^8.0.0",
     "prettier": "^1.15.2",
     "rambdax": "^1.8.0"
