this will build

--- a/package.json
+++ b/package.json
@@ -6,56 +6,38 @@
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby clean && gatsby develop",
-    "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
+    "start": "gatsby develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.4.2",
-    "dot-prop": "^6.0.1",
-    "gatsby": "^2.32.13",
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
+    "gatsby": "^5.13.3",
     "gatsby-awesome-pagination": "^0.3.8",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-offline": "^2.0.16",
-    "gatsby-plugin-postcss": "^2.3.13",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-sharp": "^2.14.4",
-    "gatsby-remark-images": "^3.11.1",
-    "gatsby-remark-prismjs": "^3.13.0",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-transformer-remark": "^2.16.1",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-offline": "^6.13.1",
+    "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-prismjs": "^7.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "jquery": "^3.7.1",
-    "npm": "^8.19.4",
+    "npm": "^10.2.4",
     "prismjs": "^1.29.0",
-    "prop-types": "^15.8.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^5.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "sass": "^1.71.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-preset-gatsby": "^0.1.6",
-    "cssnano": "^4.1.11",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^1.4.0",
-    "gatsby-remark-embed-video": "^1.7.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-mixins": "^6.2.1",
-    "postcss-nested": "^4.1.1",
-    "postcss-preset-env": "^6.7.2",
-    "postcss-url": "^8.0.0",
-    "prettier": "^1.15.2",
-    "rambdax": "^1.8.0"
+    "babel-preset-gatsby": "^3.13.1",
+    "rambdax": "^11.0.0"
   },
   "repository": {
     "type": "git",
