--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "gatsby-transformer-sharp": "^5.13.1",
     "jquery": "^3.7.1",
     "npm": "^10.2.4",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "sass": "^1.71.1"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "babel-preset-gatsby": "^3.13.1",
-    "rambdax": "^11.0.0"
+    "rambdax": "^11.0.0",
+    "sass": "^1.71.1",
+    "prismjs": "^1.29.0"
   }
 }
